--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "ibantools": "^4.3.3",
     "js-base64": "^3.7.6",
     "json5": "^2.2.3",
+    "jsonpath": "^1.1.1",
     "jwt-decode": "^3.1.2",
     "libphonenumber-js": "^1.10.28",
     "lodash": "^4.17.21",
@@ -116,6 +117,7 @@
     "@types/crypto-js": "^4.1.1",
     "@types/dompurify": "^3.0.5",
     "@types/jsdom": "^21.0.0",
+    "@types/jsonpath": "^0.2.4",
     "@types/lodash": "^4.14.192",
     "@types/mime-types": "^2.1.1",
     "@types/netmask": "^2.0.0",
